--- a/React Ecommerce Project/ecommerceapp/src/components/custom-button/custom-button.styles.scss
+++ b/React Ecommerce Project/ecommerceapp/src/components/custom-button/custom-button.styles.scss
@@ -14,6 +14,8 @@
     border: none;
     cursor: pointer;
     margin:10px;
+    display: flex;
+    justify-content: center;
   
     &:hover {
       background-color: white;
@@ -27,6 +29,17 @@
           background-color: #357ae8;
           border: none;
         }
+    }
+    &.inverted {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
+      &:hover {
+        background-color: black;
+        color: white;
+        border: none;
+      }
     }
 
   }
