--- a/React Ecommerce Project/ecommerceapp/src/components/card-dropdown/card.dropdown.scss
+++ b/React Ecommerce Project/ecommerceapp/src/components/card-dropdown/card.dropdown.scss
@@ -10,7 +10,11 @@
     top: 90px;
     right: 40px;
     z-index: 5;
-  
+
+    .empty-message {
+      margin:50px auto;
+      font-size: 18px;
+    }
     .cart-items {
       height: 240px;
       display: flex;
@@ -21,5 +25,6 @@
     button {
       margin-top: auto;
     }
+   
   }
   
