Implement the stripe integration and update the title and favicon

--- a/React Ecommerce Project/ecommerceapp/src/pages/checkout/checkout.styles.scss
+++ b/React Ecommerce Project/ecommerceapp/src/pages/checkout/checkout.styles.scss
@@ -28,5 +28,14 @@
       margin-left: auto;
       font-size: 36px;
     }
+    .test-warning {
+      color:red;
+      text-align: center;
+      margin-top:24px;
+      font-size: 20px;
+    }
+    .StripeCheckout {
+      margin-left:20px;
+    }
   }
   
