Implement the shopData to get that using promise and update the shop reducers,Implement the loading feature for asyncronous events to get the data from firestore

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -18,7 +18,7 @@
     justify-content: center;
   
     &:hover {
-      background-color: white;
+      background-color: rgb(114, 42, 42);
       color: black;
       border: 1px solid black;
     }
